[gd_scene load_steps=12 format=3 uid="uid://f5mxg3phjwb7"]

[ext_resource type="PackedScene" uid="uid://dp781vdb5kvc7" path="res://Scenes/UI/UIComponents/art_button.tscn" id="1_ps5kr"]
[ext_resource type="Theme" uid="uid://bfw6ylcttychc" path="res://Themes/Themes/AverageButton.tres" id="1_rbsrj"]
[ext_resource type="Script" uid="uid://bpqs1eulu3kni" path="res://Code/Scenes/UI/Main/non_mon.gd" id="2_pstaf"]
[ext_resource type="Shader" uid="uid://chaingl03cnx1" path="res://Shaders/Shine2D.gdshader" id="2_rbsrj"]
[ext_resource type="PackedScene" uid="uid://o2i8sw2v3cqb" path="res://Scenes/UI/UIComponents/stack_button.tscn" id="5_faxoe"]
[ext_resource type="Texture2D" uid="uid://b51pkerqwu6l2" path="res://Art/ProjectSpecific/recycle-bin.png" id="7_dle7r"]
[ext_resource type="Texture2D" uid="uid://bomrwrxx3bp6w" path="res://Art/ProjectSpecific/prize(1).png" id="8_024ff"]
[ext_resource type="Texture2D" uid="uid://bskd2eyqex5x6" path="res://Art/ProjectSpecific/cards.png" id="9_ako2g"]
[ext_resource type="Texture2D" uid="uid://g4501tb3fecs" path="res://Art/ProjectSpecific/palm-of-hand.png" id="10_n01m2"]
[ext_resource type="PackedScene" uid="uid://ekxwkd3amd1t" path="res://Scenes/UI/UIComponents/BuffDisplay.tscn" id="10_pstaf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sty7b"]
resource_local_to_scene = true
shader = ExtResource("2_rbsrj")
shader_parameter/shine_color = Color(0.98, 0.925, 0.231, 1)
shader_parameter/base_color = Color(0.180736, 0.120593, 0.350483, 1)
shader_parameter/pixel_size = 32
shader_parameter/shine_speed = 7.0
shader_parameter/shine_size = 0.07
shader_parameter/shine_bool = false

[node name="Non_mon" type="HBoxContainer"]
offset_left = 552.0
offset_top = 39.0
offset_right = 1000.0
offset_bottom = 159.0
theme = ExtResource("1_rbsrj")
alignment = 2
script = ExtResource("2_pstaf")
metadata/_edit_group_ = true

[node name="ChangeDisplay" parent="." instance=ExtResource("10_pstaf")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 1
side_version = true

[node name="ArtButton" type="CenterContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="ArtButton"]
layout_mode = 2

[node name="ArtButton" parent="ArtButton/MarginContainer" instance=ExtResource("1_ps5kr")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_sty7b")
layout_mode = 2

[node name="Stacks" type="GridContainer" parent="."]
layout_mode = 2
size_flags_vertical = 4
columns = 2

[node name="Discards" type="HBoxContainer" parent="Stacks"]
unique_name_in_owner = true
layout_mode = 2

[node name="DiscardButton" parent="Stacks/Discards" instance=ExtResource("5_faxoe")]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("7_dle7r")
list = 2

[node name="Prizes" type="HBoxContainer" parent="Stacks"]
unique_name_in_owner = true
layout_mode = 2

[node name="PrizeButton" parent="Stacks/Prizes" instance=ExtResource("5_faxoe")]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("8_024ff")
list = 3

[node name="Hand" type="HBoxContainer" parent="Stacks"]
unique_name_in_owner = true
layout_mode = 2

[node name="HandButton" parent="Stacks/Hand" instance=ExtResource("5_faxoe")]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("10_n01m2")

[node name="Deck" type="HBoxContainer" parent="Stacks"]
unique_name_in_owner = true
layout_mode = 2

[node name="DeckButton" parent="Stacks/Deck" instance=ExtResource("5_faxoe")]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("9_ako2g")
list = 1
